sass/_main.scss
@charset "utf-8";

#main {
	&.main-content {
		padding-top: 30px; 
        
		@include breakFirst(medium){
			padding: $grid-gutter-width*1.5 $grid-gutter-width*2;
            margin-bottom: $grid-gutter-width*2;
		}	
	}
	&.full-width-content {
		@include breakFirst(large){
			padding-top: 150px;
		}
		.footer-wrap {
			margin-top: 0;	
		}
		.breaker {
			margin-bottom: 0;	
		}	
	}
	.page-template-landing-page-full-width & {
		padding: 0;
	}
}
.page-template-landing-page,
.page-template-landing-page-full-width {
	.edit-link {
		position: absolute;	
	}
	
	@include breakFirst( wide){
		padding-top: 150px;			
	}
}
.page-template-submenu {
    @extend .page-template-landing-page;
}
.category #main {
	@extend .main-content;	
}

a:focus, a:hover {
	text-decoration: none;	
}
.entry-content, .wp-editor {
	a {
		letter-spacing: 1px;
		font-weight: 500;
	}
	h2 {
		margin-top: $grid-gutter-width*2;
		
		&:first-child {
			margin-top: $grid-gutter-width;	
		}
	}
	h5 {
		line-height: 24px;
	}
	ul {
		li:before {
			content: none;
			margin-right: 0;	
		}
		li {
			text-transform: none;
		}
		&.big-list a {
			letter-spacing: 2px;
			text-transform: uppercase; 
		}
	}
    ol {
        @extend ul;
        
        li {
            list-style-type: decimal;
        }
    }
	.img-circle {
		border-radius: 50%;
	}
	.img-icon {
		width: 150px; 
		height: 150px;
		line-height: 150px;
		font-size: 100px;
		background-color: $cyan;
		color: $blueLight;
		border-radius: 50%;
		text-align: center;
		margin-left: 15px;
		display: none;
		
		@include breakFirst(medium){
			display: inline-block; 
		}
	}
	.img-icon-left {
		margin: 0 15px 60px 10px;
		float: left;	
	}
	.img-icon-nobg {
		background-color: transparent;
		height: 100px;
		width: 100px;
		margin-bottom: 15px;
	}
	.img-icon-alt {
		margin-top: 30px;
	}
	.img-icon-nobottom {
		margin-bottom: 0;	
	}
	.img-icon-spacer {
		margin: 0;
		width: 0px;
		background-color: transparent;	
		
		@include breakFirst(wide){
			margin: 0 15px 60px 10px;
			width: 150px; 
		}
	}
	h2 + div {
		margin-top: 30px;	
	}
    table {
        width: 100%;
        max-width: 100%;
        margin-bottom: $grid-gutter-width;
        
        td, th {
            padding: $grid-gutter-width/4 $grid-gutter-width/2;
            vertical-align: top;
        }
        
        th {
            border-bottom: 2px solid #ddd;
        }
    }
}
.screen-reader-text {
	/*text-indent: -999em;
	display: block;
	margin-bottom: -30px;*/
	@extend .visuallyhidden;
}
.img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
}

/* 
 * Required Core WordPress 
 * https://codex.wordpress.org/CSS
*/
.sticky {
	background-color: $white;
	padding: 30px;
}
.gallery-caption {
	
}
.bypostauthor {
	
}
figure img {
	max-width: 100%;
	height: auto;
}
img.alignnone, img.aligncenter {
	@extend .img-responsive;
}
.alignnone {
    margin: 5px 20px 20px 0;
}

.aligncenter,
div.aligncenter {
    display: block;
    margin: 5px auto 5px auto;
}

.alignright {
    float:right;
    margin: 5px 0 20px 20px;
}
.alignleft {
   width: 100%;
   height: auto;
   
   @include breakFirst($screen-phone){ 
		float: left;
		margin: 5px 20px 20px 0;
		width: auto;
		height: auto;
		max-width: 50%;
   }
}
a img.alignright {
    float: right;
    margin: 5px 0 20px 20px;
}

a img.alignnone {
    margin: 5px 20px 20px 0;
}

a img.aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto
}
.wp-caption {
    background: #fff;
    max-width: 96%; /* Image does not overflow the content area */
    padding: 5px 3px 10px;
}

.wp-caption.alignnone {
    margin: 5px 20px 20px 0;
}

.wp-caption.alignleft {
    margin: 5px 20px 20px 0;
}

.wp-caption.alignright {
    margin: 5px 0 20px 20px;
}

.wp-caption img {
    border: 0 none;
    height: auto;
    margin: 0;
    max-width: 98.5%;
    padding: 0;
    width: auto;
}

figure.wp-caption img {
	float: none;
}

.wp-caption-text {
	color: $grayDark;
	
	a {
		color: $grayDark;	
	}
}

.wp-caption p.wp-caption-text {
    font-size: 11px;
    line-height: 17px;
    margin: 0;
    padding: 0 4px 5px;
}

/* Text meant only for screen readers. */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 0.875rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar. */
}
.btn {
	border-radius: 0;
    
    &.btn-white {
        border-color: $white;
        color: $white;
        
        &:hover {
            background-color: $white;
            color: $orange;
        }
    }
}
strong {
	font-weight: 500;	
}
.entry-footer {
	clear: both;
	margin-top: $grid-gutter-width*2;	
}

.screen-reader-title {
	padding: 0;
	margin: 0;
	display: inline;
}

.gallery {
	overflow: auto;
	margin-top: $grid-gutter-width;
	margin-bottom: $grid-gutter-width;
	
	.gallery-caption {
		/* required */
	}
}
.bypostauthor {
    /* required */
}

.article-post-title {
	font-family: $fontFamily;
	font-size: 24px;
	line-height: 30px;
	letter-spacing: 0;
	margin-bottom: $grid-gutter-width/2;
	text-transform: uppercase;

	a {
		font-weight: 500;
		letter-spacing: 0;
	}
}
.article-post-more {
	font-size: 14px;
}

.article-post-excerpt {
	font-size: 16px;
	line-height: 26px;	
	
	.read-more {
		@extend .article-post-more;
	}
}
.article-post-thumbnail {
	display: block;
	margin-bottom: $grid-gutter-width/2;
	
	@include breakFirst( $screen-phone ){
		float: left;
		margin-right: $grid-gutter-width/2;
		margin-bottom: $grid-gutter-width;
	}
	
	@include breakFirst( medium ){
		margin-right: $grid-gutter-width;
		margin-bottom: $grid-gutter-width;
	}
}

.archive {
	.entry-title {
		@extend .article-post-title;
		font-size: 28px;
	}
}

